[package]
name = "rit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
color-eyre = "0.6.1"
flate2 = { version = "1.0.22", features = ["zlib"] }
hex = "0.4.3"
once_cell = "1.10.0"
os_str_bytes = "6.0.0"
rand = "0.8.5"
sha-1 = "0.10.0"
tempdir = "0.3.7"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[features]
