[package]
name = "rit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.12", features = ["derive", "env"] }
color-eyre = "0.6.2"
flate2 = { version = "1.0.24", features = ["zlib"] }
hex = "0.4.3"
libc = "0.2.126"
once_cell = "1.13.0"
os_str_bytes = "6.2.0"
rand = "0.8.5"
sha-1 = "0.10.0"
tempdir = "0.3.7"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
walkdir = "2.3.2"

[features]
