[package]
name = "rit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.1"
camino = "1.1.1"
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive", "env"] }
color-eyre = "0.6.2"
flate2 = { version = "1.0.24", features = ["zlib"] }
hex = "0.4.3"
libc = "0.2.137"
memchr = "2.5.0"
nom = "7.1.1"
nom-supreme = "0.8.0"
once_cell = "1.16.0"
pretty_assertions = "1.3.0"
rand = "0.8.5"
rayon = "1.5.3"
regex = "1.7.0"
sha-1 = "0.10.0"
tap = "1.0.1"
termcolor = "1.1.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
walkdir = "2.3.2"

[dev-dependencies]
filetime = "0.2.18"
pretty_assertions = "1.3.0"
tempdir = "0.3.7"

[features]


[profile.release]
debug = true
